--- a/smartpos-view/src/styles.scss
+++ b/smartpos-view/src/styles.scss
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~foundation-sites/scss/foundation';
+  @include foundation-everything;
+
+// Import Angular ngx-foundation Framework Added Styles
+@import "~ngx-foundation/assets/scss/main";
