--- a/smartpos-view/src/app/layout/header/header.component.html
+++ b/smartpos-view/src/app/layout/header/header.component.html
@@ -1,16 +1,16 @@
 <div class="layout">
 
-  <a href="#" id="header-menu-button" (click)="changeSidebarStatus()" [ngClass]="{ 'header-menu-active' : menuActive }">
+  <a href="#" id="header-menu-button" (click)="changeSidebarStatus()" *ngIf="haveAccess()" [ngClass]="{ 'header-menu-active' : menuActive }">
     <i class="fa fa-angle-right arrow"></i>
     <i class="fa fa-angle-up mobile"></i>
   </a>
 
   <span class="topbar-title textwhite">Aplicación para punto de venta</span>
 
-  <a href="#" id="topbar-profile-menu-button" (click)="userMenuActive = !userMenuActive">
+  <a href="#" id="topbar-profile-menu-button" (click)="userMenuActive = !userMenuActive" *ngIf="haveAccess()">
     <div id="topbar-name-container">
       <span id="topbar-name">{{ user?.fullName }}</span>
-      <span id="topbar-last-access">Último ingreso: {{ user?.lastAccess }}</span>
+      <span id="topbar-last-access">Ingreso: {{ user?.lastAccess }}</span>
     </div>
     <img alt="ecuador-layout" class="topbar-profile" src="assets/images/user.jpg" style="display:none;" />
     <i class="fa fa-sort-down"></i>
