--- a/smartpos-view/src/app/widgets/w-create-employee/w-create-employee.component.html
+++ b/smartpos-view/src/app/widgets/w-create-employee/w-create-employee.component.html
@@ -51,8 +51,8 @@
 	    </div>
 	  </div>
 	  <div class="form-group">
-	    <label for="mail">Correos electrónicos</label>
-	    <input type="text" class="form-control" id="mail" formControlName="mail" placeholder="mirandavelez@hotmail.com">
+	    <label for="mails">Correos electrónicos</label>
+	    <input type="text" class="form-control" id="mails" formControlName="mails" placeholder="mirandavelez@hotmail.com">
 	    <div class="invalid-feedback">
 	        Please enter a message in the textarea.
 	    </div>
