--- a/smartpos-view/src/app/widgets/login/login.component.html
+++ b/smartpos-view/src/app/widgets/login/login.component.html
@@ -1,46 +1,33 @@
-        <div class="grid-container fluid">
-          <div class="small-3 medium-4 large-12 cell">
-            <div class="grid-x grid-padding-x align-center">
-                <div class="small-6 medium-4 large-4 cell text-center">
-                  <h3>{{lblTittleForm}}</h3>
-                  <!-- 
-                  <img src="images/avatar.png" alt="Inicio de Sesion">
-                  -->                        
-                </div>
-            </div>
-            <div *ngIf="showMessage" class="grid-x grid-padding-x align-center">
-                <div class="small-6 medium-4 large-4 cell text-center">
-                  {{textMessage}}                  
-                </div>
-            </div>
-            <form #userlogin="ngForm" class="card-section" (ngSubmit)="accessUser()">
-              <div class="grid-x grid-padding-x align-center">
-                <div class="small-8 medium-6 large-4 cell">
-                  <label class="fi-home">{{lblQuestionUsernameForm}}</label>
-                  <input type="text" name="username" [(ngModel)]="username" placeholder="{{lblQuestionUsernameForm}}" />
-                </div>
-              </div>
-              <div class="grid-x grid-padding-x align-center">
-                <div class="small-8 medium-6 large-4 cell">
-                  <label class="fi-unlock">{{lblQuestionPasswdForm}}</label>
-                  <input type="password" name="password" [(ngModel)]="password" placeholder="{{lblQuestionPasswdForm}}" />
-                </div>
-              </div>
-              <!-- 
-              <div class="grid-x grid-padding-x">
-                <div class="small-offset-2 medium-offset-3 large-offset-4 cell">
-                  <input id="checkbox1" type="checkbox"><label for="checkbox1">Remind me</label>
-                </div>
-              </div>
-              -->
-              <div class="grid-x grid-padding-x">
-                <div class="small-offset-2 medium-offset-3 large-offset-4 cell" id="ingresar">
-                   <button type="submit" 
-                  		   class="button float-left">{{lblButtonAccessForm}}</button>
-				   <button type="button" 
-				   		   class="button rounded bordered shadow secondary">{{lblButtonRegisterForm}}</button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
+<div class="card center-block" style="width:25rem;">
+  <div class="card-body">
+    <h5 class="card-title">{{lblTittleForm}}</h5>
+  	<h6 *ngIf="showMessage" class="card-subtitle mb-2 text-muted text/center">
+       {{textMessage}} 
+    </h6>
+	<form #userlogin="ngForm" class="card-text needs-validation" novalidate (ngSubmit)="accessUser()">
+	  <div class="form-group">
+	    <label for="username">{{lblQuestionUsernameForm}}</label>
+	    <input type="text" class="form-control" id="username" name="username" [(ngModel)]="username" placeholder="{{lblQuestionUsernameForm}}" required>
+	    <div class="invalid-feedback">
+	        Please enter a message in the textarea.
+	    </div>
+	  </div>
+	  
+	  <div class="form-group">
+	    <label for="phones">{{lblQuestionPasswdForm}}</label>
+	    <input type="password" class="form-control" id="password" name="password" [(ngModel)]="password" placeholder="{{lblQuestionPasswdForm}}" required>
+	    <div class="invalid-feedback">
+	        Please enter a message in the textarea.
+	    </div>
+	  </div>
+	  
+	  <div class="form-group row">
+	    <div class="form-group col-md-12 text-center">
+	      	<button type="submit" class="btn btn-primary" [disabled]="!userlogin.valid">{{lblButtonAccessForm}}</button>
+	    	<button type="button" class="btn btn-primary">{{lblButtonRegisterForm}}</button>
+	    </div>
+	  </div>
+	</form>
+  </div>
+</div>
+
