cambios en vista

--- a/smartpos-view/src/app/widgets/login/login.component.html
+++ b/smartpos-view/src/app/widgets/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="card center-block" style="width:25rem;">
+<div class="card" style="width:35rem">
   <div class="card-body">
     <h5 class="card-title">{{lblTittleForm}}</h5>
   	<h6 *ngIf="showMessage" class="card-subtitle mb-2 text-muted text/center">
