ajuste a estilos y componentes

--- a/smartpos-view/src/app/widgets/login/login.component.html
+++ b/smartpos-view/src/app/widgets/login/login.component.html
@@ -23,7 +23,7 @@
 	  
 	  <div class="form-group row">
 	    <div class="form-group col-md-12 text-center">
-	      	<button type="submit" class="btn btn-primary" [disabled]="!userlogin.valid">{{lblButtonAccessForm}}</button>
+	      	<button type="submit" class="btn btn-primary btn-space" [disabled]="!userlogin.valid">{{lblButtonAccessForm}}</button>
 	    	<button type="button" class="btn btn-primary">{{lblButtonRegisterForm}}</button>
 	    </div>
 	  </div>
