--- a/smartpos-view/src/app/widgets/w-create-employee/w-create-employee.component.html
+++ b/smartpos-view/src/app/widgets/w-create-employee/w-create-employee.component.html
@@ -3,145 +3,154 @@
     <h4>{{lblTittleForm}}</h4>
   </div>
   <div class="card-body">
-	<form class="card-text needs-validation" novalidate #employeecreate="ngForm" (ngSubmit)="create()">
+	<form class="card-text needs-validation" novalidate [formGroup]="registerEmployee" (ngSubmit)="create()">
 	  <div class="form-group">
 	    <label for="phones">{{lblInputTypePerson}}</label>
-	      <select id="persontype" name="persontype" [(ngModel)]="employee.type" class="form-control" (change)="loadTypeIdentification($event.target.value)">
+	      <select id="persontype" name="persontype" formControlName="employee.type" class="form-control" (change)="loadTypeIdentification($event.target.value)">
 	         <option [value]="typePerson.abbreviation" *ngFor="let typePerson of typesPerson">{{typePerson.description}}</option>
 	      </select>
-	    <div class="invalid-feedback">
-	        Please enter a message in the textarea.
-	    </div>
 	  </div>
 	  <div class="form-row">
 	    <div class="form-group col-md-6">
 	      <label for="idtype">{{lblInputIdType}}</label>
-	      <select id="idtype" name="idtype" [(ngModel)]="employee.id.type" class="form-control">
+	      <select id="idtype" name="idtype" formControlName="employee.id.type" class="form-control" [ngClass]="{ 'is-invalid': fields['employee.id.type'].errors }">
 	         <option [value]="typeIdentification.abbreviation" *ngFor="let typeIdentification of typesIdentification">{{typeIdentification.description}}</option>
 	      </select>
-	      <div class="invalid-feedback">
-	        Please enter a message in the textarea.
+	      <div class="invalid-feedback" *ngIf="fields['employee.id.type'].errors">
+	        {{errInputIdType}}
 	      </div>
 	    </div>
 	    <div class="form-group col-md-6">
 	      <label for="idnumber">{{lblInputIdNumber}}</label>
-	      <input type="text" class="form-control" id="idnumber" name="idnumber" placeholder="15651771" [(ngModel)]="employee.id.number" required>
-	      <div class="invalid-feedback">
-	        Please enter a message in the textarea.
+	      <input type="text" class="form-control" id="idnumber" name="idnumber" placeholder="15651771" formControlName="employee.id.number" [ngClass]="{ 'is-invalid': fields['employee.id.number'].errors }" required>
+	      <div class="invalid-feedback" *ngIf="fields['employee.id.number'].errors">
+	        {{errInputIdNumber}}
 	      </div>
 	    </div>
 	  </div>
 	  <div class="form-row">
 	    <div class="form-group col-md-6">
 	      <label for="name">{{lblInputName}}</label>
-	      <input type="text" class="form-control" id="name" name="name" placeholder="Richard" [(ngModel)]="employee.name" required>
-	      <div class="invalid-feedback">
-	        Please enter a message in the textarea.
+	      <input type="text" class="form-control" id="name" name="name" placeholder="Richard" formControlName="employee.name" [ngClass]="{ 'is-invalid': fields['employee.name'].errors }" required>
+	      <div class="invalid-feedback" *ngIf="fields['employee.name'].errors">
+	        {{errInputName}}
 	      </div>
 	    </div>
 	    <div class="form-group col-md-6">
 	      <label for="lastname">{{lblInputLastname}}</label>
-	      <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Mojica" [(ngModel)]="employee.lastname" required>
-	      <div class="invalid-feedback">
-	        Please enter a message in the textarea.
+	      <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Mojica" formControlName="employee.lastname" [ngClass]="{ 'is-invalid': fields['employee.lastname'].errors }" required>
+	      <div class="invalid-feedback" *ngIf="fields['employee.lastname'].errors">
+	        {{errInputLastname}}
 	      </div>
 	    </div>
 	  </div>
 	  <div class="form-row">
 	    <div class="form-group col-md-6">
 	      <label for="birth">{{lblInputBirth}}</label>
-	      <input type="date" class="form-control" id="birth" name="birth" [(ngModel)]="employee.birth" required>
-	      <div class="invalid-feedback">
-	        Please enter a message in the textarea.
+	      <input type="date" class="form-control" id="birth" name="birth" formControlName="employee.birth" [ngClass]="{ 'is-invalid': fields['employee.birth'].errors }" required>
+	      <div class="invalid-feedback" *ngIf="fields['employee.birth'].errors">
+	        {{errInputBirth}}
 	      </div>
 	    </div>
 	    <div class="form-group col-md-6">
 	      <label for="bothcity">{{lblInputBothCity}}</label>
-	      <input type="text" class="form-control" id="bothcity" name="bothcity" [(ngModel)]="employee.bothcity" placeholder="Bogota" required>
-	      <div class="invalid-feedback">
-	        Please enter a message in the textarea.
+	      <input type="text" class="form-control" id="bothcity" name="bothcity" formControlName="employee.bothcity" placeholder="Bogota"  [ngClass]="{ 'is-invalid': fields['employee.bothcity'].errors }" required>
+	      <div class="invalid-feedback" *ngIf="fields['employee.bothcity'].errors">
+	        {{errInputBothCity}}
 	      </div>
 	    </div>
 	  </div>
 	  <div class="form-row">
 		  <div class="form-group col-md-6">
 		    <label for="address">{{lblInputAddress}}</label>
-		    <input type="text" class="form-control" id="address" name="address" [(ngModel)]="employee.address" placeholder="1234 Main St" required>
-		    <div class="invalid-feedback">
-		        Please enter a message in the textarea.
+		    <input type="text" class="form-control" id="address" name="address" formControlName="employee.address" [ngClass]="{ 'is-invalid': fields['employee.address'].errors }" placeholder="1234 Main St" required>
+		    <div class="invalid-feedback" *ngIf="fields['employee.address'].errors">
+		        {{errInputAddress}}
 		    </div>
 		  </div>
 		  <div class="form-group col-md-6">
 		    <label for="city">{{lblInputCity}}</label>
-		    <input type="text" class="form-control" id="city" name="city" [(ngModel)]="employee.city" placeholder="Bogota" required>
-		    <div class="invalid-feedback">
-		        Please enter a message in the textarea.
+		    <input type="text" class="form-control" id="city" name="city" formControlName="employee.city" [ngClass]="{ 'is-invalid': fields['employee.city'].errors }" placeholder="Bogota" required>
+		    <div class="invalid-feedback" *ngIf="fields['employee.city'].errors">
+		        {{errInputCity}}
 		    </div>
 		  </div>
 	  </div>
 	  <div class="form-group">
 	    <label for="phones">{{lblInputPhones}}</label>
-	    <input type="text" class="form-control" id="phones" name="phones" [(ngModel)]="employee.phones" placeholder="245678" required>
-	    <div class="invalid-feedback">
-	        Please enter a message in the textarea.
+	    <input type="text" class="form-control" id="phones" name="phones" formControlName="employee.phones" [ngClass]="{ 'is-invalid': fields['employee.phones'].errors }" placeholder="245678" required>
+	    <div class="invalid-feedback" *ngIf="fields['employee.phones'].errors">
+	        {{errInputPhones}}
 	    </div>
 	  </div>
 	  <div class="form-group">
 	    <label for="mails">{{lblInputMails}}</label>
-	    <input type="text" class="form-control" id="mails" name="mails" [(ngModel)]="employee.mails" placeholder="mirandavelez@hotmail.com">
-	    <div class="invalid-feedback">
-	        Please enter a message in the textarea.
+	    <input type="text" class="form-control" id="mails" name="mails" formControlName="employee.mails" [ngClass]="{ 'is-invalid': fields['employee.mails'].errors }" placeholder="mirandavelez@hotmail.com">
+	    <div class="invalid-feedback" *ngIf="fields['employee.mails'].errors">
+	        {{errInputMails}}
 	    </div>
 	  </div>
 	  <div class="form-row">
 	    <div class="form-group col-md-6">
 	      <label for="contractType">{{lblInputContractType}}</label>
-	      <select id="contractType" name="contractType" [(ngModel)]="employee.contract.type" class="form-control">
+	      <select id="contractType" name="contractType" formControlName="employee.contract.type" [ngClass]="{ 'is-invalid': fields['employee.contract.type'].errors }" class="form-control" required>
 	          <option [value]="typeContract.abbreviation" *ngFor="let typeContract of typesContract">{{typeContract.description}}</option>
 	      </select>
+	      <div class="invalid-feedback" *ngIf="fields['employee.contract.type'].errors">
+	        {{errInputContractType}}
+	      </div>
 	    </div>
 	    <div class="form-group col-md-6">
 	      <label for="contractNumber">{{lblInputContractNumber}}</label>
-	      <input type="text" class="form-control" name="contractNumber" id="contractNumber" [(ngModel)]="employee.contract.number" placeholder="456799">
+	      <input type="text" class="form-control" name="contractNumber" id="contractNumber" formControlName="employee.contract.number" [ngClass]="{ 'is-invalid': fields['employee.contract.number'].errors }" placeholder="456799" required>
+	      <div class="invalid-feedback" *ngIf="fields['employee.contract.number'].errors">
+	        {{errInputContractNumber}}
+	      </div>
 	    </div>
 	  </div>
 	  <div class="form-row">
 	    <div class="form-group col-md-6">
 	      <label for="contractBegin">{{lblInputContractBegin}}</label>
-	      <input type="date" class="form-control" name="contractBegin" id="contractBegin" [(ngModel)]="employee.contract.begin">
+	      <input type="date" class="form-control" name="contractBegin" id="contractBegin" formControlName="employee.contract.begin" [ngClass]="{ 'is-invalid': fields['employee.contract.begin'].errors }">
+	      <div class="invalid-feedback" *ngIf="fields['employee.contract.begin'].errors">
+	        {{errInputContractBegin}}
+	      </div>
 	    </div>
 	    <div class="form-group col-md-6">
 	      <label for="contractEnd">{{lblInputContractEnd}}</label>
-	      <input type="date" class="form-control" name="contractEnd" id="contractEnd" [(ngModel)]="employee.contract.end">
+	      <input type="date" class="form-control" name="contractEnd" id="contractEnd" formControlName="employee.contract.end" [ngClass]="{ 'is-invalid': fields['employee.contract.end'].errors }">
+	      <div class="invalid-feedback" *ngIf="fields['employee.contract.end'].errors">
+	        {{errInputContractEnd}}
+	      </div>
 	    </div>
 	  </div>
 	  <div class="form-group">
 	    <label for="userName">{{lblInputUsername}}</label>
-	    <input type="text" class="form-control" name="username" id="username" [(ngModel)]="employee.user.name" placeholder="richmoj233" required>
-	    <div class="invalid-feedback">
-	        Please enter a message in the textarea.
+	    <input type="text" class="form-control" name="username" id="username" formControlName="employee.user.name"  [ngClass]="{ 'is-invalid': fields['employee.user.name'].errors }" placeholder="richmoj233" required>
+	    <div class="invalid-feedback" *ngIf="fields['employee.user.name'].errors">
+	        {{errInputUsername}}
 	    </div>
 	  </div>
 	  <div class="form-row">
 	    <div class="form-group col-md-6">
 	      <label for="password1">{{lblInputUserpasswd}}</label>
-	      <input type="password" class="form-control" name="password1" id="password1" [(ngModel)]="employee.user.password1" placeholder="Clave" required>
-		  <div class="invalid-feedback">
-		      Please enter a message in the textarea.
+	      <input type="password" class="form-control" name="password1" id="password1" formControlName="employee.user.password1" [ngClass]="{ 'is-invalid': fields['employee.user.password1'].errors }" placeholder="Clave" required>
+		  <div class="invalid-feedback" *ngIf="fields['employee.user.password1'].errors">
+		      {{errInputUserpasswd}}
 		  </div>
 	    </div>
 	    <div class="form-group col-md-6">
 	      <label for="password2">{{lblInputUserpasswdCon}}</label>
-	      <input type="password" class="form-control" name="password2" id="password2" [(ngModel)]="employee.user.password2" placeholder="Repetir clave" required>
-		  <div class="invalid-feedback">
-		      Please enter a message in the textarea.
+	      <input type="password" class="form-control" name="password2" id="password2" formControlName="employee.user.password2" [ngClass]="{ 'is-invalid': fields['employee.user.password2'].errors }" placeholder="Repetir clave" required>
+		  <div class="invalid-feedback" *ngIf="fields['employee.user.password2'].errors">
+		      {{errInputUserpasswdCon}}
 		  </div>
 	    </div>
 	  </div>
 	  
 	  <div class="form-group row">
 	    <div class="form-group col-md-12 text-center">
-	      	<button type="submit" class="btn btn-primary btn-space" [disabled]="!employeecreate.valid">{{lblButtonCreate}}</button>
+	      	<button type="submit" class="btn btn-primary btn-space">{{lblButtonCreate}}</button>
 	    	<button type="reset"  class="btn btn-primary">{{lblButtonClean}}</button>
 	    </div>
 	  </div>
